--- a/search/index.html
+++ b/search/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://matthewbaggins.github.io/mindsaway/search/" />
 <meta property="og:site_name" content="mindsaway" />
 <script type="application/ld+json">
-{"description":"Our global optimum lies many minds away from here, but our mind’s a way to there","url":"https://matthewbaggins.github.io/mindsaway/search/","@type":"WebPage","headline":"Search","@context":"https://schema.org"}</script>
+{"url":"https://matthewbaggins.github.io/mindsaway/search/","@type":"WebPage","headline":"Search","description":"Our global optimum lies many minds away from here, but our mind’s a way to there","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/mindsaway/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://matthewbaggins.github.io/mindsaway/feed.xml" title="mindsaway" /><link rel="shortcut icon" type="image/x-icon" href="/mindsaway/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
